Update and rename Index.html to index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="https://kit.fontawesome.com/64c4d4e7d8.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <title>Escape</title>
+  <title>Escape Plan</title>
     <!--Let browser know website is optimized for mobile-->
 
   </head>
